[gd_scene load_steps=6 format=2]

[ext_resource path="res://objects/actors/Robot1.gd" type="Script" id=1]
[ext_resource path="res://assets/0x72_16x16RobotTileset.v1.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.24735
height = 11.5935

[sub_resource type="Animation" id=2]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 208, 16, 16, 32 ), Rect2( 224, 16, 16, 32 ), Rect2( 240, 16, 16, 32 ), Rect2( 256, 16, 16, 32 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 288, 16, 16, 32 ), Rect2( 304, 16, 16, 32 ), Rect2( 320, 16, 16, 32 ), Rect2( 336, 16, 16, 32 ), Rect2( 352, 16, 16, 32 ), Rect2( 368, 16, 16, 32 ), Rect2( 384, 16, 16, 32 ), Rect2( 400, 16, 16, 32 ) ]
}

[node name="Robot1" type="KinematicBody2D"]
z_index = 1
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/walk = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 208, 16, 16, 32 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="PlatformDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )

[node name="HoldPosition2D" type="Position2D" parent="."]
position = Vector2( 25, 0 )

[node name="ChatBubble" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogue" type="Label" parent="ChatBubble"]
margin_left = 12.0
margin_top = -23.0
margin_right = 200.0
margin_bottom = -9.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="timeout" from="DialogueTimer" to="." method="_on_DialogueTimer_timeout"]
